# open-weather-wizard

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  RELEASE_NOTES.md  SECURE_STORAGE_EXAMPLE.md  demo_secure_storage.sh  get_weather_icons.sh  install.sh  meteo-wizard.desktop  open-weather-wizard.desktop
.github/workflows/: ci.yml  release.yml  rust-clippy.yml  rust.yml
assets/lottie/: clouds.json  drizzle.json  fog.json  haze.json  rain.json  snow.json  sun.json  thunderstorm.json  tornado.json  wind.json
docs/: ARCHITECTURE.md  GOOGLE_WEATHER_API.md  ICON_MAPPING.md  UI_DESIGN.md
docs/previous_releases/: v0.2.0.md
docs_meta_data/: ANIMATED_ICONS.md
examples/: clear_credentials.rs  demo.rs  generate_tray_icons.rs  google_weather_test.rs  lottie_spike.rs  openweather_test.rs  tray_spike.rs
packaging/macos/: Info.plist
src/: app.rs  cli.rs  config.rs  geolocation.rs  lib.rs  main.rs  secure_storage.rs  style.css
src/settings/: mod.rs  url_config.rs
src/ui/: about.rs  build_elements.rs  forecast_row.rs  icons.rs  location_switcher.rs  main_screen.rs  mod.rs  preferences.rs  preferences_window.rs  skeleton.rs  spinner.rs  style.rs  temperature.rs  transition.rs
src/ui/lottie/: mod.rs  widget.rs
src/weather_api/: alerts.rs  forecast.rs  google_weather_api.rs  mod.rs  openweather.rs  openweather_api.rs  weather_provider.rs
src/weather_data/: mod.rs  weather_point.rs
src/web_protocols/: http_fetch.rs  mod.rs
