[package]
name = "open-weather-wizard"
version = "0.2.0"
edition = "2024"
authors = ["Arunkumar Mourougappane <amouroug.dev@gmail.com>"]
description = "A simple, elegant desktop weather app with animated Lottie icons, a 5-day forecast, and a silent cross-faded auto-refresh, built in Rust with iced."
homepage = "https://github.com/arunkumar-mourougappane/open-weather-wizard"
repository = "https://github.com/arunkumar-mourougappane/open-weather-wizard"
readme = "README.md"
license = "MIT"
keywords = ["weather", "gui", "iced", "desktop", "forecast"]
categories = ["gui"]
# examples/lottie_spike.rs is a throwaway prototype (see its own doc
# comment), not a usage example.
exclude = ["examples/lottie_spike.rs"]

[dependencies]
env_logger = "0.11.8"
iced = { version = "0.14.0", features = ["svg", "image", "tokio", "canvas"] }
log = { version = "0.4.27", features = ["std"] }
reqwest = { version = "0.12.23", features = ["json"] }
rust-embed = { version = "8.7.2", features = ["compression"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["full"] }
base64 = "0.22.1"
dirs = "6.0.0"
async-trait = "0.1.89"
anyhow = "1.0.100"
velato = { version = "0.10.0", features = ["wgpu"] }
wgpu = "27.0.1"
image = { version = "0.25.10", default-features = false, features = ["png"] }
open = "5.3.2"
keyring = { version = "3.6", features = ["apple-native", "windows-native", "sync-secret-service"] }
jiff = "0.2.31"

[[bin]]
name = "open-weather-wizard"
path = "src/main.rs"

[dev-dependencies]
tokio-test = "0.4.3"

[package.metadata.packager]
product-name = "Open Weather Wizard"
identifier = "com.arunkumarmourougappane.open-weather-wizard"
category = "Weather"
icons = ["assets/icon/iconset/*.png"]
out-dir = "target/dist"
before-packaging-command = "cargo build --release --locked"
binaries = [{ path = "open-weather-wizard", main = true }]

[package.metadata.packager.deb]
depends = ["libxkbcommon0", "libwayland-client0", "libx11-6", "libxrandr2", "libxi6", "libdbus-1-3"]

[package.metadata.packager.dmg]
window-size = { width = 660, height = 400 }
app-position = { x = 180, y = 170 }
application-folder-position = { x = 480, y = 170 }
