[package]
name = "open-weather-wizard"
version = "0.3.0"
edition = "2024"
authors = ["Arunkumar Mourougappane <amouroug.dev@gmail.com>"]
description = "A simple, elegant desktop weather app with animated Lottie icons, a 5-day forecast, and a silent cross-faded auto-refresh, built in Rust with iced."
homepage = "https://github.com/arunkumar-mourougappane/open-weather-wizard"
repository = "https://github.com/arunkumar-mourougappane/open-weather-wizard"
readme = "README.md"
license = "MIT"
keywords = ["weather", "gui", "iced", "desktop", "forecast"]
categories = ["gui"]
# examples/lottie_spike.rs and examples/tray_spike.rs are throwaway
# prototypes (see their own doc comments), not usage examples.
exclude = ["examples/lottie_spike.rs", "examples/tray_spike.rs"]

[dependencies]
env_logger = "0.11.8"
iced = { version = "0.14.0", features = ["svg", "image", "tokio", "canvas"] }
log = { version = "0.4.27", features = ["std"] }
reqwest = { version = "0.12.23", features = ["json"] }
rust-embed = { version = "8.7.2", features = ["compression"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["full"] }
base64 = "0.22.1"
dirs = "6.0.0"
async-trait = "0.1.89"
anyhow = "1.0.100"
velato = { version = "0.10.0", features = ["wgpu"] }
wgpu = "27.0.1"
image = { version = "0.25.10", default-features = false, features = ["png"] }
open = "5.3.2"
keyring = { version = "3.6", features = ["apple-native", "windows-native", "sync-secret-service"] }
jiff = "0.2.31"
clap = { version = "4.6.1", features = ["derive"] }
auto-launch = "0.6.0"
dark-light = "2.0.0"
# Persistent tray/menu bar icon (issue #56). Uses a polling API
# (`TrayIconEvent::receiver()`) rather than push events through a
# `winit::event_loop::EventLoopProxy`, so it doesn't need access to iced's
# internal event loop -- see `examples/tray_spike.rs` for the spike that
# proved this against this project's actual iced version before adopting
# it for real. Linux support is native X11 (`x11rb`), not GTK, avoiding the
# GTK-vs-iced conflict `docs/ARCHITECTURE.md` documents for the GTK4
# rewrite; macOS uses `objc2-app-kit` (`NSStatusItem`), consistent with
# this project's other objc2-based macOS code (`src/geolocation.rs`).
tray = "0.1.2"

[[bin]]
name = "open-weather-wizard"
path = "src/main.rs"

[dev-dependencies]
tokio-test = "0.4.3"

# OS-native location backends (src/geolocation.rs's `os_location` module) --
# one per platform, so e.g. a Linux build never pulls in objc2/CoreLocation
# bindings.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSArray", "NSObject", "NSError"] }
objc2-core-location = { version = "0.3", features = ["CLLocationManager", "CLLocationManagerDelegate", "CLLocation"] }
objc2-core-foundation = { version = "0.3", features = ["CFRunLoop", "CFDate"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62", features = ["Devices_Geolocation"] }

[target.'cfg(target_os = "linux")'.dependencies]
zbus = { version = "5", default-features = false, features = ["tokio"] }
futures-util = "0.3"

[package.metadata.packager]
product-name = "Open Weather Wizard"
identifier = "com.arunkumarmourougappane.open-weather-wizard"
category = "Weather"
icons = ["assets/icon/iconset/*.png"]
out-dir = "target/dist"
before-packaging-command = "cargo build --release --locked"
binaries = [{ path = "open-weather-wizard", main = true }]

[package.metadata.packager.deb]
depends = ["libxkbcommon0", "libwayland-client0", "libx11-6", "libxrandr2", "libxi6", "libdbus-1-3"]

[package.metadata.packager.dmg]
window-size = { width = 660, height = 400 }
app-position = { x = 180, y = 170 }
application-folder-position = { x = 480, y = 170 }

# NSLocationWhenInUseUsageDescription is required for the packaged .app to
# ever show a location permission prompt (see src/geolocation.rs's macos
# submodule) -- without it, CoreLocation just denies silently.
[package.metadata.packager.macos]
info-plist-path = "packaging/macos/Info.plist"
